Pull up following revision(s) (requested by bouyer in ticket #1061): 	sys/dev/i2c/gttwsi_core.c: revision 1.4-1.8 via patch 	sys/dev/i2c/gttwsivar.h: revision 1.4 via patch Use IPL_VM for bus lock so we can do i2c xfers from interrupt context Don't sleep with IPL_VM lock held. When initiating a transfer, if a device isn't present, we won't get an ACK after sending the address.  Check for this alternate state and suppress the error message when it occurs. Fixes PR kern/53356. Bail early if gttwsi_send_start() fails in gttwsi_initiate_xfer() to avoid unexpected state error message later (on Allwinner H5). Expand code covered by sc->sc_mtx, to make sure an interrupt would not be handled before the cv_timedwait_sig() call, or while polling. Seems to fix "sunxitwi0: send STOP failed" messages frequently seen related to axp20x0 sensors.